<resources>
    <string name="app_name">29BPDJ - Proyecto1Eva</string>
    <string name="toast_bd_existente">A BD NON SE VAI COPIAR. XA EXISTE</string>
    <string name="toast_bd_copiada">BASE DE DATOS COPIADA</string>
    <string name="toast_login">Iniciando sesión.</string>
    <string name="dialogo_titulo">29BPDJ - No se pudo iniciar la sesión</string>
    <string name="dialogo_mensaje">El login o el password que has introducido son incorrectos. Compruébalos y vuelve a intentarlo de nuevo.</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="identificador">29BPDJ</string>
    <string name="nombre">Nombre</string>
    <string name="password">Password</string>
    <string name="login">29BPDJ - Login</string>
    <string name="id">ID</string>
    <string name="crear_cuenta">Crear Nueva Cuenta</string>
    <string name="registrar">Registrar</string>
    <string name="titulo_crear_usuario">29BPDJ - Registar</string>
    <string name="email">Email</string>
    <string name="direccion">Direccion</string>
    <string name="subscripcion">Subscripcion</string>
    <string name="subscripcion_novedades">Deseo registrarme al boletin de novedades.</string>
    <string name="titulo_campos_registro_no_validos">Registro fallido</string>
    <string name="campo_vacio">Rellena el campo</string>
    <string name="campos_registro_vacios">Debes completar todos los campos del formulario para realizar el registro.</string>
    <string name="titulo_direccion_invalida">Selecciona un país.</string>
    <string name="direccion_invalida">Debes seleccionar un pais de residencia.</string>
    <string name="titulo_password_invalida">Contraseña no válida.</string>
    <string name="password_invalida">La contraseña debe contener un minimo de 6 caracteres.</string>
    <string name="registro_exitoso">29BPDJ - Nuevo usuario registrado.</string>
    <string name="registro_fallido">29BPDJ - Error en el registro de usuario.</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar sesión - 29BPDJ</string>
    <string name="titulo_usuario_existente">Usuario ya existe</string>
    <string name="usuario_existente">El usuario que has introducido ya existe.</string>
    <string name="tipo_de_componente">Tipo de componente</string>
    <string name="busqueda_nombre">Nombre</string>
    <string name="precio_min">Precio minimo:</string>
    <string name="precio_max">Precio maximo:</string>
    <string name="moneda">€</string>
    <string name="buscar">29BPDJ - Buscar</string>
    <string name="opcional">Opcional</string>
    <string name="componentes">Componentes</string>
    <string name="error_precio_mayor">El precio maximo debe ser mayor que el precio minimo</string>
    <string name="error_precio_negativo">El precio no puede ser negativo</string>
    <string name="error_precios">Error conversion precios</string>
    <string name="todos">TODOS</string>
    <string name="otro">Otro</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="mapa">Mapa</string>
    <string name="formulario">Formulario</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="title_activity_maps">Map</string>
</resources>
