<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login"
        android:layout_width="@dimen/edit_text_login"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password"
        android:hint="@string/usuario"
        />

    <EditText
        android:layout_width="@dimen/edit_text_login"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_centerInParent="true"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/iniciar_sesion"
        android:layout_below="@id/password"
        android:layout_marginTop="@dimen/login_bttn_margin"
        android:layout_alignStart="@id/signup_button"
        android:layout_alignEnd="@id/signup_button"
        android:layout_alignLeft="@id/signup_button"
        android:layout_alignRight="@id/signup_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/crear_cuenta"/>
</RelativeLayout>
